@@ -13,13 +13,18 @@ struct GBAVideo;
 DECL_BITFIELD(GBAVideoTileCacheConfiguration, uint32_t);
 DECL_BIT(GBAVideoTileCacheConfiguration, ShouldStore, 0);
 
+struct GBAVideoTileCacheEntry {
+	uint32_t paletteVersion;
+	uint32_t vramVersion;
+	uint8_t vramClean;
+	uint8_t palette256;
+};
+
+typedef struct GBAVideoTileCacheEntry GBAVideoTileCacheStatus[1024 * 3][16];
+
 struct GBAVideoTileCache {
 	uint16_t* cache;
-	struct GBAVideoTileCacheEntry {
-		uint32_t paletteVersion;
-		uint8_t vramClean;
-		uint8_t palette256;
-	} status[1024 * 3][16];
+	GBAVideoTileCacheStatus status;
 	uint32_t globalPaletteVersion[32];
 	uint32_t globalPalette256Version[2];
 
@@ -37,8 +42,8 @@ void GBAVideoTileCacheAssociate(struct GBAVideoTileCache* cache, struct GBAVideo
 void GBAVideoTileCacheWriteVRAM(struct GBAVideoTileCache* cache, uint32_t address);
 void GBAVideoTileCacheWritePalette(struct GBAVideoTileCache* cache, uint32_t address);
 const uint16_t* GBAVideoTileCacheGetTile16(struct GBAVideoTileCache* cache, unsigned tileId, unsigned paletteId);
-const uint16_t* GBAVideoTileCacheGetTile16IfDirty(struct GBAVideoTileCache* cache, unsigned tileId, unsigned paletteId);
+const uint16_t* GBAVideoTileCacheGetTile16IfDirty(struct GBAVideoTileCache* cache, GBAVideoTileCacheStatus handle, unsigned tileId, unsigned paletteId);
 const uint16_t* GBAVideoTileCacheGetTile256(struct GBAVideoTileCache* cache, unsigned tileId, unsigned paletteId);
-const uint16_t* GBAVideoTileCacheGetTile256IfDirty(struct GBAVideoTileCache* cache, unsigned tileId, unsigned paletteId);
+const uint16_t* GBAVideoTileCacheGetTile256IfDirty(struct GBAVideoTileCache* cache, GBAVideoTileCacheStatus handle, unsigned tileId, unsigned paletteId);
 
 #endif
